Change grid layout to two columns on narrow screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -496,7 +496,7 @@ header.nav .actions {
   }
 
   .grid, .list-grid {
-    grid-template-columns: 1fr; /* single column on narrow screens */
+    grid-template-columns: auto auto; /* single column on narrow screens */
   }
 }
 
